<resources>
    <string name="app_name">Kotta</string>
    <string name="title_activity_principal">Inicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kotta</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="permisos">Petición de Permisos</string>
    <string name="nesitaPermisos">Necesitamos los permisos para seleccionar el PDF</string>
    <string name="pacage">package</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_perfil">Perfil</string>
    <string name="logout">Log out </string>

    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="SignIn">Iniciar sesión</string>
    <string name="CreateAccount">Crear una cuenta</string>
    <string name="SignInGoogle">Inicia sesión con Google</string>
    <string name="search">Buscar</string>
    <string name="check">Guardar</string>
    <string name="nombre">Nombre</string>
    <string name="instrument">Instrumento</string>
    <string name="author">Autor</string>
    <string name="category">Categoría</string>

    <string name="Aviso">Aviso</string>
    <string name="vacio">Es necesario rellenar todos los campos</string>
    <string name="pdfNull">Se debe añadir la partitura</string>
    <string name="avisoBorrar">¿Está seguro que desea eliminar la partitura? </string>

    <string name="Rock">Rock</string>
    <string name="Pop">Pop</string>
    <string name="Clasica">Clásica</string>
    <string name="Videojuegos">Videojuegos</string>
    <string name="Peliculas">Películas</string>
    <string name="Baladas">Baladas</string>
    <string name="error_logout">Logout error</string>
    <string name="notFoundCreateAccount">Email or Password Not found, Please create an account</string>
    <string name="subidaExito">Partitura subida con éxito</string>
    <string name="extension">.pdf</string>
    <string name="borradoCorrecto">La partitura se ha borrado correctamente</string>

    <string-array name="category">
        <item>@string/Rock</item>
        <item>@string/Pop</item>
        <item>@string/Clasica</item>
        <item>@string/Videojuegos</item>
        <item>@string/Peliculas</item>
        <item>@string/Baladas</item>
    </string-array>
</resources>